--- a/templates/base.html
+++ b/templates/base.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="{{ request.script_root }}/">
     <title>{% block title %}WorkShift Calendar{% endblock %}</title>
-    <link rel="stylesheet" href="static/vendor/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="static/vendor/bootstrap-icons/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     {% block head %}{% endblock %}
 </head>
 <body>
     {% if current_user.is_authenticated %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('index') }}">
+            <a class="navbar-brand" href="/">
                 <i class="bi bi-calendar3"></i> WorkShift
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -23,13 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}"><i class="bi bi-calendar-week"></i> Calendar</a>
+                        <a class="nav-link" href="/"><i class="bi bi-calendar-week"></i> Calendar</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('templates_page') }}"><i class="bi bi-clock"></i> Templates</a>
+                        <a class="nav-link" href="/templates"><i class="bi bi-clock"></i> Templates</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('settings_page') }}"><i class="bi bi-gear"></i> Settings</a>
+                        <a class="nav-link" href="/settings"><i class="bi bi-gear"></i> Settings</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -51,7 +50,7 @@
         {% block content %}{% endblock %}
     </main>
     
-    <script src="static/vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
